// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/HeaderLabel Header Label 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <p
        class="MuiTypography-root makeStyles-label MuiTypography-body1 MuiTypography-displayInline"
      >
        name
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <p
          class="MuiTypography-root makeStyles-value MuiTypography-body1"
        >
          value
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label/HeaderLabel Header Label Tool Tip 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <p
        class="MuiTypography-root makeStyles-label MuiTypography-body1 MuiTypography-displayInline"
      >
        name
      </p>
      <div
        class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
      >
        <span />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <p
          class="MuiTypography-root makeStyles-value MuiTypography-body1"
        >
          value
        </p>
      </div>
    </div>
  </div>
</div>
`;
